@@ -7,6 +7,8 @@ Release 0.3 (not yet released)
 
 * The manual has been converted from LaTeX to texinfo.
 
+* An automatically generated Changelog section has been added to manual.
+
 Release 0.2 (2025-06-07)
 
 * concrete-syntax-tree now uses the fiveam system for its unit tests.
